fix: gallery.html - added alt to all imgs and spelling css l308

--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -33,14 +33,14 @@
     
 
     <section id="photos">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/athletes.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/girls.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner1.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner2.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner3.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner4.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/running_gang.jpg">
-      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/shoes.jpg">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/athletes.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/girls.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner1.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner2.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner3.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner4.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/running_gang.jpg" alt="gallery_pic">
+      <img src="http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/shoes.jpg" alt="gallery_pic">
     </section>
     
 
